--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "esfix": "eslint . --fix",
     "stylelint": "stylelint \"**/*.{css,scss}\"",
     "stylefix": "stylelint \"**/*.{css,scss}\" --fix",
-    "build": "webpack"
+    "build": "webpack",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,7 @@
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.26.0",
+    "gh-pages": "^3.2.3",
     "hint": "^6.1.11",
     "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.1",
